simulation_elem_ids = [
	[ 'NONE',     0 ],
	[ 'DUST',     1 ],
	[ 'WATR',     2 ],
	[ 'OIL',      3 ],
	[ 'FIRE',     4 ],
	[ 'STNE',     5 ],
	[ 'LAVA',     6 ],
	[ 'GUNP',     7 ],
	[ 'NITR',     8 ],
	[ 'CLNE',     9 ],
	[ 'GAS',     10 ],
	[ 'PLEX',    11 ],
	[ 'GOO',     12 ],
	[ 'ICEI',    13 ],
	[ 'METL',    14 ],
	[ 'SPRK',    15 ],
	[ 'SNOW',    16 ],
	[ 'WOOD',    17 ],
	[ 'NEUT',    18 ],
	[ 'PLUT',    19 ],
	[ 'PLNT',    20 ],
	[ 'ACID',    21 ],
	[ 'VOID',    22 ],
	[ 'WTRV',    23 ],
	[ 'CNCT',    24 ],
	[ 'DSTW',    25 ],
	[ 'SALT',    26 ],
	[ 'SLTW',    27 ],
	[ 'DMND',    28 ],
	[ 'BMTL',    29 ],
	[ 'BRMT',    30 ],
	[ 'PHOT',    31 ],
	[ 'URAN',    32 ],
	[ 'WAX',     33 ],
	[ 'MWAX',    34 ],
	[ 'PSCN',    35 ],
	[ 'NSCN',    36 ],
	[ 'LNTG',    37 ],
	[ 'INSL',    38 ],
	[ 'BHOL',    39 ],
	[ 'WHOL',    40 ],
	[ 'RBDM',    41 ],
	[ 'LRBD',    42 ],
	[ 'NTCT',    43 ],
	[ 'SAND',    44 ],
	[ 'GLAS',    45 ],
	[ 'PTCT',    46 ],
	[ 'BGLA',    47 ],
	[ 'THDR',    48 ],
	[ 'PLSM',    49 ],
	[ 'ETRD',    50 ],
	[ 'NICE',    51 ],
	[ 'NBLE',    52 ],
	[ 'BTRY',    53 ],
	[ 'LCRY',    54 ],
	[ 'STKM',    55 ],
	[ 'SWCH',    56 ],
	[ 'SMKE',    57 ],
	[ 'DESL',    58 ],
	[ 'COAL',    59 ],
	[ 'LO2',     60 ],
	[ 'INWR',    61 ],
	[ 'YEST',    62 ],
	[ 'DYST',    63 ],
	[ 'THRM',    64 ],
	[ 'GLOW',    65 ],
	[ 'BRCK',    66 ],
	[ 'CFLM',    67 ],
	[ 'FIRW',    68 ],
	[ 'FUSE',    69 ],
	[ 'FSEP',    70 ],
	[ 'AMTR',    71 ],
	[ 'BCOL',    72 ],
	[ 'PCLN',    73 ],
	[ 'HSWC',    74 ],
	[ 'IRON',    75 ],
	[ 'MORT',    76 ],
	[ 'LIFE',    77 ],
	[ 'DLAY',    78 ],
	[ 'CO2',     79 ],
	[ 'DRIC',    80 ],
	[ 'CBNW',    81 ],
	[ 'STOR',    82 ],
	[ 'PVOD',    83 ],
	[ 'CONV',    84 ],
	[ 'CAUS',    85 ],
	[ 'LIGH',    86 ],
	[ 'TESC',    87 ],
	[ 'DEST',    88 ],
	[ 'SPNG',    89 ],
	[ 'RIME',    90 ],
	[ 'FOG',     91 ],
	[ 'BCLN',    92 ],
	[ 'LOVE',    93 ],
	[ 'DEUT',    94 ],
	[ 'WARP',    95 ],
	[ 'PUMP',    96 ],
	[ 'FWRK',    97 ],
	[ 'PIPE',    98 ],
	[ 'FRZZ',    99 ],
	[ 'FRZW',   100 ],
	[ 'GRAV',   101 ],
	[ 'BIZR',   102 ],
	[ 'BIZRG',  103 ],
	[ 'BIZRS',  104 ],
	[ 'INST',   105 ],
	[ 'ISOZ',   106 ],
	[ 'ISZS',   107 ],
	[ 'PRTI',   108 ],
	[ 'PRTO',   109 ],
	[ 'PSTE',   110 ],
	[ 'PSTS',   111 ],
	[ 'ANAR',   112 ],
	[ 'VINE',   113 ],
	[ 'INVIS',  114 ],
	[ 'E116',   115 ],
	[ 'SPAWN2', 116 ],
	[ 'SPAWN',  117 ],
	[ 'SHLD1',  118 ],
	[ 'SHLD2',  119 ],
	[ 'SHLD3',  120 ],
	[ 'SHLD4',  121 ],
	[ 'LOLZ',   122 ],
	[ 'WIFI',   123 ],
	[ 'FILT',   124 ],
	[ 'ARAY',   125 ],
	[ 'BRAY',   126 ],
	[ 'STKM2',  127 ],
	[ 'BOMB',   128 ],
	[ 'C5',     129 ],
	[ 'SING',   130 ],
	[ 'QRTZ',   131 ],
	[ 'PQRT',   132 ],
	[ 'EMP',    133 ],
	[ 'BREC',   134 ],
	[ 'ELEC',   135 ],
	[ 'ACEL',   136 ],
	[ 'DCEL',   137 ],
	[ 'BANG',   138 ],
	[ 'IGNT',   139 ],
	[ 'BOYL',   140 ],
	[ 'GEL',    141 ],
	[ 'TRON',   142 ],
	[ 'TTAN',   143 ],
	[ 'EXOT',   144 ],
	[ 'E146',   145 ],
	[ 'EMBR',   146 ],
	[ 'H2',     147 ],
	[ 'SOAP',   148 ],
	[ 'NBHL',   149 ],
	[ 'NWHL',   150 ],
	[ 'MERC',   151 ],
	[ 'PBCN',   152 ],
	[ 'GPMP',   153 ],
	[ 'CLST',   154 ],
	[ 'WIRE',   155 ],
	[ 'GBMB',   156 ],
	[ 'FIGH',   157 ],
	[ 'FRAY',   158 ],
	[ 'RPEL',   159 ],
	[ 'PPIP',   160 ],
	[ 'DTEC',   161 ],
	[ 'DMG',    162 ],
	[ 'TSNS',   163 ],
	[ 'VIBR',   164 ],
	[ 'BVBR',   165 ],
	[ 'CRAY',   166 ],
	[ 'PSTN',   167 ],
	[ 'FRME',   168 ],
	[ 'GOLD',   169 ],
	[ 'TUNG',   170 ],
	[ 'PSNS',   171 ],
	[ 'PROT',   172 ],
	[ 'VIRS',   173 ],
	[ 'VRSS',   174 ],
	[ 'VRSG',   175 ],
	[ 'GRVT',   176 ],
	[ 'DRAY',   177 ],
	[ 'CRMC',   178 ],
	[ 'HEAC',   179 ],
	[ 'SAWD',   180 ],
	[ 'POLO',   181 ],
	[ 'RFRG',   182 ],
	[ 'RFGL',   183 ],
	[ 'LSNS',   184 ],
	[ 'LDTC',   185 ],
	[ 'PTNM',   186 ],
	[ 'VSNS',   187 ],
	[ 'ROCK',   188 ],
	[ 'HL',   189 ],
	[ 'HS',   190 ],
	[ 'HE',   191 ],
	[ 'D',   192 ],
	[ 'T',   193 ],
	[ 'HE3',   194 ],
	[ 'LITH',   195 ],
	[ 'UPQK',   196 ],
	[ 'DNQK',   197 ],
	[ 'HEL',   198 ],
	[ 'HES',   199 ],
	[ 'CHQK',   200 ],
	[ 'STQK',   201 ],
	[ 'TPQK',   202 ],
	[ 'BTQK',   203 ],
    [ 'AUPQ',   204 ],
	[ 'ADNQ',   205 ],
	[ 'ACHQ',   206 ],
	[ 'ASTQ',   207 ],
	[ 'ATPQ',   208 ],
	[ 'ABTQ',   209 ],
	[ 'ENET',   210 ],
	[ 'MNET',   211 ],
	[ 'TNET',   212 ],
	[ 'AENT',   213 ],
	[ 'AMNT',   214 ],
	[ 'ATNT',   215 ],
	[ 'PRON',   216 ],
	[ 'ALPA',   217 ],
	[ 'AALP',   218 ],
	[ 'ANEU',   219 ],
	[ 'APRO',   220 ],
	[ 'LIL',   221 ],
	[ 'LIG',   222 ],
	[ 'LI7',   223 ],
	[ 'WPBS',   224 ],
	[ 'WMBS',   225 ],
	[ 'ZBOS',   226 ],
	[ 'GLON',   227 ],
	[ 'MUON',   228 ],
	[ 'TAON',   229 ],
	[ 'ANTH',   230 ],
	[ 'ANHE',   231 ],
	[ 'BE',   232 ],
	[ 'BEL',   233 ],
	[ 'BEG',   234 ],
	[ 'BE7',   235 ],
	[ 'BE10',   236 ],
	[ 'B',   237 ],
	[ 'AMON',   238 ],
	[ 'ATON',   239 ],
	[ 'PION',   240 ],
	[ 'C',   241 ],
	[ 'N',   242 ],
	[ 'O2',     243 ],
	[ 'F',   244 ],
	[ 'Ne',   245 ],
	[ 'Na',   246 ],
	[ 'Mg',   247 ],
	[ 'Al',   248 ],
	[ 'SLCN',   249 ],
	[ 'P',   250 ],
	[ 'S',   251 ],
	[ 'Cl',   252 ],
	[ 'Ar',   253 ],
	[ 'K',   254 ],
	[ 'Ca',   255 ],
	[ 'BL',   256 ],
	[ 'BG',   257 ],
	[ 'B11',   258 ],
	[ 'C_L',   259 ],
	[ 'CG',   260 ],
	[ 'C11',   261 ],
	[ 'C13',   262 ],
	[ 'C14',   263 ],
	[ 'N13',   264 ],
	[ 'N15',   265 ],
	[ 'Al26',   266 ],
	[ 'Mg26',   267 ],
]

simulation_elem_src = []
foreach elem_name_id : simulation_elem_ids
	simulation_elem_src += elem_name_id[0] + '.cpp'
endforeach
simulation_files += files(simulation_elem_src)
